# PrestoDeck

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
device/: README.md  boot.py  config.local.json.example  conftest.py  main.py  secrets.py.example
device/lib/prestodeck/: __init__.py  app.py  button.py  client.py  clock.py  discovery.py  iconcache.py  input.py  log.py  page.py  protocol.py  ui.py
device/tests/: test_device.py
docs/: action-authoring.md  config-schema.md  deck-config.md  protocol.md
examples/: README.md  launchpad-4x4.yaml  mixed-sizes.yaml  single-button.yaml  streaming-3x3.yaml
host/: README.md  pyproject.toml
host/config/: deck.example.yaml
host/src/prestodeck_host/: __init__.py  __main__.py  config.py  deploy.py  discovery.py  engine.py  icons.py  log.py  obs.py  obs_feedback.py  protocol.py  server.py  session.py  setup_device.py  state.py  watcher.py
host/src/prestodeck_host/actions/: __init__.py  _input.py  _uinput.py  base.py  http.py  keystroke.py  macro.py  media.py  navigate.py  notify.py  obs.py  python.py  shell.py  text.py  toggle.py
host/src/prestodeck_host/data/: deck.example.yaml
host/src/prestodeck_host/webui/: __init__.py  app.py
host/src/prestodeck_host/webui/static/: index.html
host/systemd/: prestodeck-host.service
host/tests/: __init__.py  mock_device.py  mock_obs.py  test_actions.py  test_config_frame.py  test_examples.py  test_icons.py  test_misc.py  test_multidevice.py  test_obs.py  test_protocol.py  test_server.py  test_session.py  test_stateful.py  test_watcher.py  test_webui.py
tools/: build_demo_video.py  deploy_to_presto.py  gen_config_schema.py  make_icons.py  render_deck_preview.py  render_icons.py
